--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "spatie/laravel-data": "^4.18",
+        "stancl/tenancy": "^3.9"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.6",
